-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.2
-
None
-
-
91fe5b358 (dev), 2a7a206b8 (6.10), 5c8769baf (6.9)
This is not a regression, rather something I kept forgetting to report.
AFAIK keyboard input in Qt+wasm is done by having a hidden html input field created by EMScripten, the issue is that echo mode Password likely does not change it to a html password field, which would then disable autocompletion, and most importantly do not save the user's password for plain text completion, maybe not all browsers saves what the user typed but I've seem it happening on Android/Chrome.
IMO this should even be tagged as a security issue.
For Gerrit Dashboard: QTBUG-133631 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
651869,1 | wasm: make sure autocomplete is off for input element | dev | qt/qtbase | Status: NEW | +1 | 0 |
653871,3 | wasm: change input element type to password for password echo mode | dev | qt/qtbase | Status: MERGED | +2 | 0 |
656395,2 | wasm: change input element type to password for password echo mode | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
656493,2 | wasm: change input element type to password for password echo mode | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |