wasm: change input element type to password for password echo mode

Fixes: QTBUG-133631
Pick-to: 6.9
Change-Id: I930de385a24229a7e47f8f80eb607fc59be19d30
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 91fe5b358e211aa308effacb95ea2dc1d75590b0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>